--- a/examples/plugin/WORKSPACE
+++ b/examples/plugin/WORKSPACE
@@ -2,8 +2,8 @@ load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")
 
 http_archive(
     name = "rules_kotlin",
-    sha256 = "34e8c0351764b71d78f76c8746e98063979ce08dcf1a91666f3f3bc2949a533d",
-    url = "https://github.com/bazelbuild/rules_kotlin/releases/download/v1.9.5/rules_kotlin-v1.9.5.tar.gz",
+    sha256 = "d89723cc9ebbb7bdb2ebaca1af7d2383e074615643cf97a366b758a76b7dc443",
+    url = "https://github.com/bazelbuild/rules_kotlin/releases/download/v2.0.0/rules_kotlin-v2.0.0.tar.gz",
 )
 
 load("@rules_kotlin//kotlin:repositories.bzl", "kotlin_repositories")
@@ -12,9 +12,16 @@ kotlin_repositories()
 
 load("@rules_kotlin//kotlin:core.bzl", "kt_register_toolchains")
 
-kt_register_toolchains()
+register_toolchains("//bzl:experimental_toolchain")
 
-load("@rules_kotlin//src/main/starlark/core/repositories:versions.bzl", "versions")
+load("@rules_kotlin//kotlin:repositories.bzl", "kotlin_repositories", "kotlinc_version", "versions")
+
+kotlin_repositories(
+    compiler_release = kotlinc_version(
+        release = "2.0.10",
+        sha256 = "88d7d8bad362ae4e114a8b9668c6887b8c85f48e340883db0e317e47c8dc2f4f",
+    ),
+)
 
 http_archive(
     name = "rules_jvm_external",
